2004-11-12  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-api.el (nh-menu-toggle-all-items): fix which regexp
	match gets replaced with '-' or '+'

2004-11-11  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-keys.el (nh-accelerator-chars): add ?# to the vector
	(nh-accelerator-chars-regexp): new defvar
	(nh-menu-item-regexp): likewise

	* nethack-api.el (nhapi-yn-function): Add ESC and C-g as abort keys.
	(nh-menu-toggle-all-items): use nh-menu-item-regexp
	(nh-menu-goto-next): likewise
	(nh-menu-goto-prev): likewise
	(nh-menu-submit): likewise
	(nh-menu-cancel): likewise

2004-07-24  Shawn Betts  <sabetts@burnt.emmett.ca>

	* Makefile (NETHACK_EL_VER): version bump to 0.9.3
	(NH_VER): version bump to 3.4.3

2003-09-18  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-purge-buffers): new global
	(nh-proc-kill-buffer-on-quit): set to `t' by default
	(nh-sentinel): call nethack-kill-buffers.

2003-09-15  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-end-hook): new hook
	(nh-proc-kill-buffer-on-quit): new defvar
	(nh-log-buffer): likewise
	(nh-sentinel): kill the process buffer if
	nh-proc-kill-buffer-on-quit is t.
	(nh-log): use nh-log-buffer
	(nethack-kill-buffers): new function

	* nethack-api.el (nhapi-end): run the hook, nethack-end-hook.

2003-09-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* Makefile (DISTFILES): added nethack-compat.el and ese-007e3.patch

2003-09-13  Shawn Betts  <sabetts@vcn.bc.ca>

	* Makefile (NH_VER): bumped to 3.4.2

2003-08-29  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack-api.el (nhapi-ask-direction): use
	read-key-sequence-vector instead of nh-read-char.

2003-06-03  Shawn Betts  <sabetts@sfu.ca>

	* nethack.el (nethack-el-version): bump version to 0.9.0

	* Makefile (NETHACK_EL_VER): new variable
	(DISTDIR): use NETHACK_EL_VER in directory
	(DISTFILES): add ese-007e0.patch

	* nethack.el (nethack-pet-face): new face.

	* nethack-api.el (nhapi-print-glyph): new optional argument,