@@ -1,3 +1,3 @@
+*.x86f
 *.tar.gz
 .patch-ok
-
